apply patch for m68k-mint-elf

--- a/ld/Makefile.am
+++ b/ld/Makefile.am
@@ -320,6 +320,9 @@ ALL_EMULATION_SOURCES = \
 	em68hc12elfb.c \
 	em68kelf.c \
 	em68kelfnbsd.c \
+	em68kmint.c \
+	em68katari.c \
+	em68kslb.c \
 	em9s12zelf.c \
 	emcorepe.c \
 	emn10200.c \
